--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form>
+    <form class="form">
       <input
         type="text"
         name="search-text"
@@ -17,7 +17,9 @@
       />
       <button type="submit">Search</button>
     </form>
-    <p class="loader-box hidden"><span class="loader"></span></p>
+    <div class="loader">
+      <p class="loader-box hidden"><span class="loader1"></span></p>
+    </div>
     <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
